# CppProjectDemo

./: .gitignore  README.md
00_HelloWorld/: 00_HelloWorld.sln  00_HelloWorld.vcxproj
00_HelloWorld/src/: main.cpp
01_CalculateArea/: 01_CalculateArea.sln
01_CalculateArea/AreaAlgorithmLib/: AreaAlgorithmLib.vcxproj  AreaAlgorithmLib.vcxproj.filters
01_CalculateArea/AreaAlgorithmLib/include/: ShapeArea.h
01_CalculateArea/AreaAlgorithmLib/src/: AreaAlgorithmLib.cpp
01_CalculateArea/MainProject/: MainProject.vcxproj
01_CalculateArea/MainProject/src/: main.cpp
02_MutiThreads/: CMakeLists.txt
02_MutiThreads/include/cmn/: thread_test.h
02_MutiThreads/src/: main.cpp  sample1.cpp  sample2.cpp  sample3.cpp
02_MutiThreads/src/cmn/: thread_test.cpp
